# IceCube_time_matching

./: .gitignore  README.md  hitbuffer_data_decode_Will_20250514_copy.py  pass1icecube.py  pass2icecube.py  pass2infill.py  pass3combined.py  pyproject.toml  timematching.sh
generate_mock_data/: make_mock_data.py  make_mock_icecube_data.py
mock_data/mock_IceCube-pass1/y0001m01d01-IceCube-pass1/: y0001m01d01-IceCube-c1-pass1.csv  y0001m01d01-IceCube-c2-pass1.csv  y0001m01d01-IceCube-c3-pass1.csv  y0001m01d01-IceCube-c4-pass1.csv  y0001m01d01-IceCube-c5-pass1.csv  y0001m01d01-IceCube-c6-pass1.csv  y0001m01d01-IceCube-c7-pass1.csv  y0001m01d01-IceCube-c8-pass1.csv
mock_data/mock_IceCube-pass1/y0001m01d02-IceCube-pass1/: y0001m01d02-IceCube-c1-pass1.csv  y0001m01d02-IceCube-c2-pass1.csv  y0001m01d02-IceCube-c3-pass1.csv  y0001m01d02-IceCube-c4-pass1.csv  y0001m01d02-IceCube-c5-pass1.csv  y0001m01d02-IceCube-c6-pass1.csv  y0001m01d02-IceCube-c7-pass1.csv  y0001m01d02-IceCube-c8-pass1.csv
mock_data/mock_infill_data/: infillsdcalibev_pass2_010102.event.bz2
notebooks/: make_mock_data.ipynb
src/: __init__.py  __main__.py  hitbuffer_data_decode_Will_20250514_copy.py  paths.py
src/hitbuffer_decode/: hitbuffer_data_decode_Will_20250514_copy.py
src/passes/: __init__.py  pass1_icecube.py  pass2_icecube.py  pass2_infill.py  pass3_combined.py
tests/passes/: test_pass1_icecube.py  test_pass2_icecube.py  test_pass2_infill.py  test_pass3_combined.py
tests/tests_passes/: test_pass2_icecube.py  test_pass2_infill.py  test_pass3_combined.py
(+44 files in other folders)
