[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IceCube_time_matching"
version = "0.1"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-memray",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]